# nonagon-l2

./: .gitignore  LICENSE  README.md  demo.ps1  send_alice_bob.ps1  test_rpc.ps1  test_transaction.ps1
explorer/: package-lock.json  package.json
explorer/src/: App.tsx  index.css
explorer/src/components/: BlockDetail.tsx  Blocks.tsx  Dashboard.tsx  Footer.tsx  Navbar.tsx  Transactions.tsx  TxDetail.tsx
nonagon-contracts/: README.md  aiken.toml  plutus.json
nonagon-contracts/lib/nonagon/: types.ak
nonagon-contracts/scripts/: gen_key.js  package-lock.json  package.json  sequencer_cli.js
nonagon-contracts/validators/: state_commitment.ak
nonagon-node/: CMakeLists.txt  README.md
nonagon-node/include/nonagon/: consensus.hpp  crypto.hpp  execution.hpp  mempool.hpp  network.hpp  node.hpp  rpc.hpp  settlement.hpp  state_manager.hpp  storage.hpp  types.hpp
nonagon-node/src/: main.cpp
nonagon-node/src/consensus/: consensus.cpp
nonagon-node/src/core/: types.cpp
nonagon-node/src/crypto/: crypto.cpp  hash.cpp
nonagon-node/src/execution/: execution.cpp  state_manager.cpp  vm_interface.cpp
nonagon-node/src/network/: network.cpp
nonagon-node/src/node/: node.cpp
nonagon-node/src/rpc/: rpc.cpp
nonagon-node/src/settlement/: settlement.cpp
nonagon-node/src/storage/: db.cpp  storage.cpp
wallet/: package-lock.json  package.json
wallet/src/: index.css
wallet/src/components/: Dashboard.tsx
